--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "date-fns": "^4.1.0",
     "firebase": "^11.6.0",
+    "firebase-admin": "^13.2.0",
     "mongoose": "^8.13.2",
     "next": "15.3.1",
     "react": "^19.0.0",
