--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "date-fns": "^4.1.0",
     "firebase": "^11.6.0",
     "firebase-admin": "^13.2.0",
+    "lucide-react": "^0.503.0",
     "mongoose": "^8.13.2",
     "next": "15.3.1",
     "react": "^19.0.0",
