--- a/package.json
+++ b/package.json
@@ -10,15 +10,20 @@
     "update-firebase-config": "node scripts/update-firebase-config.js"
   },
   "dependencies": {
+    "chart.js": "^4.4.9",
     "date-fns": "^4.1.0",
     "firebase": "^11.6.0",
     "firebase-admin": "^13.2.0",
     "framer-motion": "^12.7.4",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.503.0",
     "mongoose": "^8.13.2",
     "next": "15.3.1",
+    "papaparse": "^5.5.2",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-chartjs-2": "^5.3.0",
+    "react-dom": "^19.0.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
