--- a/package.json
+++ b/package.json
@@ -10,16 +10,18 @@
     "update-firebase-config": "node scripts/update-firebase-config.js"
   },
   "dependencies": {
+    "@azure/storage-blob": "^12.27.0",
     "chart.js": "^4.4.9",
     "date-fns": "^4.1.0",
     "firebase": "^11.6.0",
     "firebase-admin": "^13.2.0",
-    "framer-motion": "^12.7.4",
+    "framer-motion": "^12.9.1",
     "lodash": "^4.17.21",
     "lucide-react": "^0.503.0",
     "mongoose": "^8.13.2",
     "next": "15.3.1",
     "papaparse": "^5.5.2",
+    "pdfkit": "^0.17.0",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
