--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "update-firebase-config": "node scripts/update-firebase-config.js"
   },
   "dependencies": {
+    "@ant-design/icons": "^6.0.0",
     "@azure/storage-blob": "^12.27.0",
+    "@vercel/analytics": "^1.5.0",
+    "antd": "^5.24.8",
     "chart.js": "^4.4.9",
     "date-fns": "^4.1.0",
     "firebase": "^11.6.0",
