Refactor notification and offline storage components for improved browser compatibility and error handling
- Updated NotificationDisplay to dynamically import Firebase only on the client side, ensuring no SSR issues.
- Added checks for localStorage and service worker support in NotificationDisplay.
- Enhanced SaveForOffline component to verify IndexedDB support before operations and prevent rendering if not supported.
- Improved error handling in offlineSync utility functions, ensuring graceful degradation when IndexedDB is unavailable.
- Added checks for IndexedDB existence in various functions to prevent runtime errors in non-browser environments.

--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
+    "clean-build": "rm -rf .next && next build",
+    "clean-windows": "if exist .next rmdir /s /q .next && next build",
     "start": "next start",
     "lint": "next lint",
     "update-firebase-config": "node scripts/update-firebase-config.js"
