feat: Implement drag-and-drop file upload in NoteUploadForm component
feat: Add console log for note data retrieval in NoteViewer component

refactor: Remove dashboard path from offline functionality in OfflineWrapper

fix: Change default theme to light in ThemeContext

feat: Add 'seminar' as a valid room type in Room model and introduce imageUrl field

feat: Enhance roomService to support image upload and deletion during room creation and updates

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "SCSRK Campus Portal",
-  "short_name": "SCSRK",
+  "name": "Campus Connect",
+  "short_name": "CC",
   "description": "Campus management portal for announcements, attendance tracking, and more",
   "start_url": "/",
   "display": "standalone",
